@@ -4,6 +4,7 @@ Changes in 3.2rc1 :
 - Make sure ratio limit and seed time limit spinboxes in statustab only emit the valueChanged signal when the user is done editing the spinbox (175625)
 - Don't show error message when torrent is loaded silently and the files can't be created (ported from stable)
 - Fix crash in plasma applet
+- Added select all action, manual announce now gets SHIFT + A as shortcut to not conflict with select all 
 
 Changes in 3.2beta1 :
 - Ask to create directory in fileselectdlg, if it does not exist (163965)
